fix: add missing padding

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -86,6 +86,10 @@
     flex-grow: 0;
 }
 
+.card-content p {
+    margin: 0.7rem;
+}
+
 
 @media only screen and (max-width: 1300px) {
     .card {
